--- a/angular.json
+++ b/angular.json
@@ -54,7 +54,7 @@
                                 "replace": "src/environments/environment.ts",
                                 "with": "src/environments/environment.prod.ts"
                             }],
-                            "outputHashing": "all"
+                            "outputHashing": "none"
                         },
                         "development": {
                             "buildOptimizer": false,
